After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 665497 - PolicyKit action for PackageKit not translated in authentication dialog
PolicyKit action for PackageKit not translated in authentication dialog
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2011-12-03 15:40 UTC by Cheng-Chia Tseng
Modified: 2013-09-13 06:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The Screenshot of the Authentication Dialogue. (251.64 KB, image/png)
2011-12-03 15:40 UTC, Cheng-Chia Tseng
Details
The policy file on Fedora 16 (129.78 KB, application/xml)
2011-12-04 19:54 UTC, Cheng-Chia Tseng
Details
Authentication Dialogue, pt_BR (405.72 KB, image/png)
2011-12-07 17:46 UTC, Cheng-Chia Tseng
Details
Fallback mode, Authentication Dialogue, zh_TW (340.08 KB, image/png)
2011-12-07 17:46 UTC, Cheng-Chia Tseng
Details
Fallback mode, Authentication Dialogue, pt_BR (369.38 KB, image/png)
2011-12-07 17:47 UTC, Cheng-Chia Tseng
Details
this update cause gnome-shell not to show translaitons properly (7.88 KB, text/plain)
2011-12-19 04:28 UTC, Cheng-Chia Tseng
Details

Description Cheng-Chia Tseng 2011-12-03 15:40:37 UTC
Created attachment 202711 [details]
The Screenshot of the Authentication Dialogue.

When promting Authentication Dialogue, the translated strings of Chinese (Traditional) are not loaded, although all the strings of packagekit have been translated.

For example, "Authentication is required to install a signed package" should be "要安裝一個已簽署的套件需先經過身份認證".

The translation not loaded problem seems to be only on Authentication Diaglogue, maybe policikit does not handle the translations well
Comment 1 Milan Bouchet-Valat 2011-12-03 15:57:57 UTC
Here (Fedora 15) this string is translated in French. What's weird is that the Chinese translation seems to be present:
    <message xml:lang="zh_CN">安装已签名软件包需要认证</message>
    <message xml:lang="zh_TW">要安裝一個已簽署的套件需先經過身份認證</message>

Could you check that it's the case on your system too? It should be in /usr/share/polkit-1/actions/org.freedesktop.packagekit.policy.
Comment 2 Cheng-Chia Tseng 2011-12-04 19:53:13 UTC
Yes, I have checked that file on Fedora 16. Those translations are present.
Comment 3 Cheng-Chia Tseng 2011-12-04 19:54:25 UTC
Created attachment 202764 [details]
The policy file on Fedora 16
Comment 4 Cheng-Chia Tseng 2011-12-04 20:00:34 UTC
I think of that Update Manager within Ubuntu did have the same problem before (not loading the translations in the Authentication Dialougue), but they solved it later. Maybe there is something alike behind the problem.

The bug report: https://bugs.launchpad.net/aptdaemon/+bug/663150

But I am not sure if they are caused by the same problem.
Comment 5 Milan Bouchet-Valat 2011-12-05 15:49:50 UTC
It doesn't seem that's the problem, since the patch from Ubuntu hasn't been applied upstream, and anyway the .desktop file contains the translations, so it's not in the Ubuntu format.

And as I said, it's translated here on Fedora 15 in French. It would be good that somebody confirms it works for him on F16 too. You could also check other languages on your own machine.

Maybe there's a problem with your locale code? What does "echo $LANG" say?
Comment 6 Cheng-Chia Tseng 2011-12-06 17:37:58 UTC
This problem exists from F15 (GNOME 3.0) to F16 (GNOME 3.2) fresh installation.

It is reported that Punjabi (pa_IN) showed the translation of "Authentication is required to install a signed package", but did not show the translation of "password: ". [1]

It is reported that zh_CN translations are not displayed both "Authentication message" and "password: " either, even through it exist in  /usr/share/locale/zh_CN/LC_MESSAGES/system-config-firewall.mo file. [1]

My "echo $LANG" is "zh_TW.UTF-8".

1. https://bugzilla.redhat.com/show_bug.cgi?id=701021
Comment 7 Milan Bouchet-Valat 2011-12-07 12:24:18 UTC
(In reply to comment #6)
> This problem exists from F15 (GNOME 3.0) to F16 (GNOME 3.2) fresh installation.
> 
> It is reported that Punjabi (pa_IN) showed the translation of "Authentication
> is required to install a signed package", but did not show the translation of
> "password: ". [1]
"Password:" is either in the Shell or in PAM, so that's completely unrelated (though still a bug, to report separately). And if the "Authentication..." string is translated in Punjabi, then it mean that one works.

> It is reported that zh_CN translations are not displayed both "Authentication
> message" and "password: " either, even through it exist in 
> /usr/share/locale/zh_CN/LC_MESSAGES/system-config-firewall.mo file. [1]
There's something specific to Chinese here. Actually, I think I've found an explanation: French and Punjabi are "fr" and "pa" in the policy file, while traditional Chinese has a variant ("_TW"). This can be where the bug comes from.

It would be useful to test a few languages that are translated in the policy file and use variants, like pt_BR and bn_IN. Also, please check that in fallback mode, the Chinese string is translated (the authentication agent is different in fallback mode).
Comment 8 Cheng-Chia Tseng 2011-12-07 17:45:22 UTC
Languages tested:

*GNOME Shell

Chinese (Taiwan), zh_TW: Authentication message is English, and "Password: " is English.
Portuguese (Brazil), pt_BR: Authentication message is transltaed, and "Passwrod: " is English.

*Fallback mode

Chinese (Taiwan), zh_TW: Authentication message is English, and ""Password: " is translated.
Portuguese (Brazil), pt_BR: Authentication message is transltaed, and "Passwrod: " is translated.
Comment 9 Cheng-Chia Tseng 2011-12-07 17:46:11 UTC
Created attachment 203020 [details]
Authentication Dialogue, pt_BR
Comment 10 Cheng-Chia Tseng 2011-12-07 17:46:50 UTC
Created attachment 203021 [details]
Fallback mode, Authentication Dialogue, zh_TW
Comment 11 Cheng-Chia Tseng 2011-12-07 17:47:12 UTC
Created attachment 203022 [details]
Fallback mode, Authentication Dialogue, pt_BR
Comment 12 Milan Bouchet-Valat 2011-12-07 18:54:00 UTC
So, to sum up:
- the problem doesn't come from the _ variants, since pt_BR works
- the fallback mode has the same problem, so that's probably a bug in PolicyKit or something
- the "Password:" string isn't translated, and that's a bug specific to the Shell

Please file a new report for the last point, we'll go on investigating the rest of the issues here (and move them to the right place if needed).

David, any ideas?
Comment 13 Cheng-Chia Tseng 2011-12-08 16:58:26 UTC
What is the product should I report to for "Password: " string not translated? I will file one as soon as I got it.
Comment 14 David Zeuthen (not reading bugmail) 2011-12-08 17:13:55 UTC
Try grepping for "Authentication Agent" in /var/log/secure and post the first line that is returned. On my system, I get this

 # grep "Authentication Agent" /var/log/secure
 Dec  6 10:29:57 davidzs-thinkpad-t420s polkitd(authority=local): Registered Authentication Agent for unix-session:/org/freedesktop/ConsoleKit/Session1 (system bus name :1.212 [/usr/bin/gnome-shell], object path /org/freedesktop/PolicyKit1/AuthenticationAgent, locale en_US.utf8)
 [more lines omitted]
Comment 15 Cheng-Chia Tseng 2011-12-08 18:10:08 UTC
My first line of the result:

Dec  5 03:45:09 HiHeHo polkitd(authority=local): Unregistered Authentication Agent for unix-session:/org/freedesktop/ConsoleKit/Session2 (system bus name :1.66, object path /org/freedesktop/PolicyKit1/AuthenticationAgent, locale zh_TW.utf8) (disconnected from bus)
Comment 16 Cheng-Chia Tseng 2011-12-19 04:27:18 UTC
Yesterday, I update my F16. After reboot, some strings of gnome-shell encounter the translation not loaded problem too.

For example, Suspend, Power off..., Today, Tomorrow, This week, F, and the message of the power indicator are all in English now.

However, Fallback mode doesn't seem to have this problem, the power indicator is OK.

I noticed that gtk3 is updated, will it be the cause?

I will attach the log of update yesterday.
Comment 17 Cheng-Chia Tseng 2011-12-19 04:28:14 UTC
Created attachment 203835 [details]
this update cause gnome-shell not to show translaitons properly
Comment 18 Cheng-Chia Tseng 2011-12-20 15:54:29 UTC
The situation reported at Comment 16 does not occur on my Desktop machine. Quite odd. Thus, it might not be related to this issue.

If there is something I can help with this translation not loaded problem, please tell me. I will do my best.
Comment 19 Cheng-Chia Tseng 2012-01-26 07:14:22 UTC
After some search, we found out that there was a bug MIGHT be related to this problem. 

https://bugzilla.gnome.org/show_bug.cgi?id=596260

It will be good that somebody can confirm that it is true or not. If there is something I could help for testing, please ask freely.
Comment 20 Milan Bouchet-Valat 2012-01-26 09:36:38 UTC
I don't see the link at all. Why do you think it's related?

In the updated packages list you attached, there are several Shell extensions. Could you try disabling all extensions and retry? I don't see how updating GTK3 could affect the Shell, which isn't based on GTK.
Comment 21 Cheng-Chia Tseng 2012-01-27 06:34:37 UTC
Oh, after reinstalling F16 and re-updating, the situation in Comment 16, 17 does not happen again. I doubted it was caused by some packages, but it is fixed now. Although I don't know why it happened and how it was fixed, it seemed not to have a deal with this issue.

We, some Traditional Chinese users, are not programmers, so we only "Guess" there might be some relationship between PolicyKit authentication dialog do not appear to be able to pass their window IDs and PolicyKit authentication dialog can not show some translations.

We are so urge to try to have it fixed. If there is no relationship between them, we are sorry about the mistaking.

However, thank you for your kindly help. We are appreciate about that. :)
Comment 22 Milan Bouchet-Valat 2012-01-27 11:05:31 UTC
(In reply to comment #21)
> Oh, after reinstalling F16 and re-updating, the situation in Comment 16, 17
> does not happen again. I doubted it was caused by some packages, but it is
> fixed now. Although I don't know why it happened and how it was fixed, it
> seemed not to have a deal with this issue.
So, is the bug completely fixed with the reinstall?

> We, some Traditional Chinese users, are not programmers, so we only "Guess"
> there might be some relationship between PolicyKit authentication dialog do not
> appear to be able to pass their window IDs and PolicyKit authentication dialog
> can not show some translations.
Yeah, of course all users and translators cannot be developers. ;-)

In the present case, I think your suspicion is wrong: the window ID isn't used at all to get correct translations. The problem must be elsewhere (in broken files for example).

> We are so urge to try to have it fixed. If there is no relationship between
> them, we are sorry about the mistaking.
> 
> However, thank you for your kindly help. We are appreciate about that. :)
No problem.
Comment 23 Cheng-Chia Tseng 2012-01-31 13:09:10 UTC
> So, is the bug completely fixed with the reinstall?
No, the authentication is still not showing translations. But the other strings (Suspend, Power off..., Today, Tomorrow, This week, F, and the message of the power indicator) showing English after THAT update (Comment 16) is fixed by reinstall F16 and re-update.
Comment 24 Piotr Drąg 2012-06-27 11:28:13 UTC
I reported bug #675300 concerning "Password:" string some time ago, and it has seen some little developer attention.
Comment 25 Matthias Clasen 2012-06-28 00:31:15 UTC
In the end, this is a polkit bug, see 
https://bugs.freedesktop.org/show_bug.cgi?id=51488
Comment 26 Cheng-Chia Tseng 2013-09-13 06:01:28 UTC
It is conformed as fixed upstream.